--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <button class="ms-Button">
-  <span class="ms-Button-label">Create Account</span>
+  <span class="ms-Button-label">Nowe Zadanie</span>
 </button>
 
 <app-tasks></app-tasks>
