--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,3 +1,3 @@
-<ul *ngFor="let task of tasks">
-  <li>{{ task.name }}</li>
-</ul>
+<app-task *ngFor="let task of tasks" [task]="task">
+
+</app-task>
