--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,2 +1,13 @@
-<p>
-  {{task.name}}</p>
+<ng-container>
+  <tr>
+    <td>
+      <span>{{task.name}}</span>
+    </td>
+    <td>
+      <span>{{task.completed}}</span>
+    </td>
+    <td>
+      <span>{{task.owner}}</span>
+    </td>
+  </tr>
+</ng-container>
