--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<h1 class="ms-font-su ms-fontColor-themePrimary">Lista zadań</h1>
 <button class="ms-Button">
   <span class="ms-Button-label">Nowe Zadanie</span>
 </button>
