--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -15,7 +15,7 @@
           <span>{{task.name}}</span>
         </td>
         <td>
-          <span>{{task.completed}}</span>
+          <span>{{StatusValues[task.status]}}</span>
         </td>
         <td>
           <span>{{task.owner}}</span>
